static/css/timeline.css
/* Timeline */
.timeline {
  list-style: none;
  padding: 20px 0 20px;
  position: relative;
}
.timeline:before {
  top: 20px;
  bottom: 0px;
  position: absolute;
  content: " ";
  width: 2px;
  background-color: #272727;
  left: 50%;
  margin-left: -1.5px;
}
.timeline > li {
  margin-bottom: 40px;
  position: relative;
  width: 50%;
  float: left;
  clear: left;
}
.timeline > li:before,
.timeline > li:after {
  content: " ";
  display: table;
}
.timeline > li:after {
  clear: both;
}
.timeline > li:before,
.timeline > li:after {
  content: " ";
  display: table;
}
.timeline > li:after {
  clear: both;
}
.timeline > li > .timeline-panel {
  width: 95%;
  float: left;
  border: 1px solid #d4d4d4;
  /*border-radius: 2px;*/
  /*padding: 20px;*/
  position: relative;
  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
}

.timeline > li > .timeline-panel:before {
  position: absolute;
  top: 26px;
  right: -15px;
  content: " ";
}
.timeline > li > .timeline-panel:after {
  position: absolute;
  top: 39px;
  right: -25px;
  display: block;
  border-top: 1px solid #e0bb6b;
  border-left: 25px solid #e0bb6b;
  border-right: 0px solid #e0bb6b;
  border-bottom: 1px solid #e0bb6b;
  content: " ";
}
.timeline > li > .timeline-badge {
  color: #e0bb6b;
  width: 24px;
  height: 24px;
  line-height: 50px;
  font-size: 1.4em;
  text-align: center;
  position: absolute;
  top: 16px;
  right: -12px;
  z-index: 100;
}
.timeline > li.timeline-inverted > .timeline-panel {
  float: right;
}
.timeline > li.timeline-inverted > .timeline-panel:before {
  border-left-width: 0;
  border-right-width: 15px;
  left: -15px;
  right: auto;
}
.timeline > li.timeline-inverted > .timeline-panel:after {
  border-left-width: 0;
  border-right-width: 25px;
  left: -25px;
  right: auto;
}
.timeline-badge > a {
  color: #C5C7C5 !important;
}
.timeline-badge a:hover {
  color: #000 !important;
}
.timeline-title {
  margin-top: 0;
  color: inherit;
}
.timeline-body > p,
.timeline-body > h3,
.timeline-body > h4,
.timeline-body > small,
.timeline-body > ul {
  padding-left: 20px;
  padding-bottom: 20px;
  padding-right: 10px;
  margin-bottom: 0;
}
.timeline-body > p + p {
  margin-top: 5px;
}
.timeline-footer{
  padding:20px;
  background-color:#f4f4f4;
}
.timeline-footer > a{
  cursor: pointer;
  text-decoration: none;
}
.tooltip{
  position:absolute;
  z-index:1020;
  display:block;
  visibility:visible;
  padding:5px;
  font-size:11px;
  opacity:0;
  filter:alpha(opacity=0);
}
.tooltip.top{
  margin-top:-2px;
}
.tooltip.right{
  margin-left:2px;
}
.tooltip.bottom{
  margin-top:2px;
}
.tooltip.left{
  margin-left:-2px;
}
.tooltip.top .tooltip-arrow,
.tooltip.left .tooltip-arrow,
.tooltip.bottom .tooltip-arrow,
.tooltip.right .tooltip-arrow{
  bottom:0;
  left:0;
  margin-left:0;
  border-left:0 solid transparent;
  border-right:5px solid transparent;
  border-top:0 solid #000;
}
.tooltip-inner{
  width:200px;
  padding:3px 8px;
  color:#fff;
  text-align:center;
  text-decoration:none;
  background-color:#313131;
  -webkit-border-radius:0px;
  -moz-border-radius:0px;
  border-radius:0px;
}
.tooltip-arrow{
  position:absolute;
  width:0;
  height:0;
}
.timeline > li.timeline-inverted{
  float: right;
  clear: right;
  margin-top: 30px;
  margin-bottom: 30px;
}
.timeline > li:nth-child(2){
  margin-top: 60px;
}
.timeline > li.timeline-inverted > .timeline-badge{
  left: -12px;
}
.detail-tl {
  right: -7.5px !important;
  top: 22.5px !important;
}
@media (max-width: 767px) {
  ul.timeline:before {
    left: 65px;
  }

  ul.timeline > li {
    margin-bottom: 20px;
    position: relative;
    width:100%;
    float: left;
    clear: left;
  }
  ul.timeline > li > .timeline-panel {
    width: calc(100% - 90px);
    width: -moz-calc(100% - 90px);
    width: -webkit-calc(100% - 90px);
  }

  ul.timeline > li > .timeline-badge {
    left: 53px;
    margin-left: 0;
    top: 16px;
  }

  ul.timeline > li > .timeline-panel {
    float: right;
  }

  ul.timeline > li > .timeline-panel:before {
    border-left-width: 0;
    border-right-width: 15px;
    left: -15px;
    right: auto;
  }

  ul.timeline > li > .timeline-panel:after {
    border-left-width: 0;
    border-right-width: 25px;
    left: -25px;
    right: auto;
  }

  .timeline > li.timeline-inverted{
    float: left;
    clear: left;
    margin-top: 30px;
    margin-bottom: 30px;
  }

  .timeline > li.timeline-inverted > .timeline-badge{
    left: 53px;
  }

  .detail-tl {
    left: 47.5px !important;
  }

  .detail-tl-date {
    top: -125px !important;
  }
}

